CSS fixes.  Fixes for Lucene 2.4

--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
     </div>
 
     <div class="querysection">
-      <h2>Your query</h2>
+      <h2>Your Query</h2>
       <pre>
         <div id="querydisplay">&nbsp;</div>
       </pre>
