More CSS tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
                     <option no_value=1 value="exists">exists</option>
                     <option no_value=1 value="does_not_exist">doesn't exist</option>
                     <option value="matches_regexp">matches regular expression</option>
-                    <option value="does_not_match_regexp">does not match regular expression</option>
+                    <option value="does_not_match_regexp">doesn't match regular expression</option>
                     <option no_value=1 value="repeats_field">appears more than once</option>
                     <option no_value=1 value="does_not_repeat_field">appears exactly once</option>
                   </select>
