--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1>MARCgrep</h1>
 
-    <p>This is tool for extracting all of the MARC records that match
+    <p>This is a tool for extracting all of the MARC records that match
     some given criteria.</p>
 
     <p>To get started, define the criteria of interest below and
