--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
     </select>
 
     <div class="container">
+      <h3>Define your query</h3>
+
       <div class="button_container">
         <div class="remove_button_container">
           <input class="remove_button" type="button" value="remove"/>
@@ -43,7 +45,7 @@
             <table>
               <tr>
                 <td>the</td>
-                <td><input type="text" class="target_field"/></td>
+                <td class="target_field_td"></td>
                 <td>field</td>
                 <td>
                   <select class="operator">
@@ -67,6 +69,12 @@
           </div>
         </div>
       </div>
+
+      <script type="text/javascript">
+        text_input($('.target_field_td'), 'target_field',
+        'target_field', '', '245, 245$a, 245!01$a, 245$abc');
+      </script>
+
       <div class="and_or_buttons">
         <input type="button" class="and_button" value="AND"/>
         <input type="button" class="or_button" value="OR"/>
