More IE fixes...

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <script type="text/javascript">
-          text_input($('.target_field_container'), 'target_field', 'target_field', '', '245, 245$a, 245!01$a, 245$abc');
+          text_input($('.target_field_container'), 'target_field', 'target_field', '', '245, 245$a, 245!01$a');
         </script>
 
         <div class="and_or_buttons">
