--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <h1>MARCgrep</h1>
+    <img class="logo" src="logo.png" />
 
     <p>This is a tool for extracting all of the MARC records that match
     some given criteria.  To get started, define the criteria of interest below and
