UI tweak to make the "Run jobs" button clearer.  I hope.

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,15 @@
     </div>
 
     <div class="joblist" style="display: none">
-      <h2><img class="step" src="2.png" /> Run your job(s)</h2>
+      <h2>
+        <img class="step" src="2.png" /> Run your job(s)
+      </h2>
+
+      <div class="job_control">
+        <input type="button" class="bombs_away" value="Run all jobs"/>
+      </div>
+
+
       <table id="job_list">
         <tr>
           <th>Query</th>
@@ -109,8 +117,6 @@
           <th>&nbsp;</th>
         </tr>
       </table>
-
-      <input type="button" class="bombs_away" value="Run all jobs"/>
     </div>
 
 
